--- a/src/components/TextEditor/TextEditor.css
+++ b/src/components/TextEditor/TextEditor.css
@@ -12,6 +12,19 @@
   /* overflow-y: scroll;
   overflow-x: hidden; */
 }
+.text_editor_quill s {
+  background-color: rgb(255, 219, 227) !important;
+  font-weight: 400 !important;
+  padding: 3px 0 !important;
+  margin: 0 !important;
+  /* font-size: 16px !important; */
+  display: inline !important;
+  text-decoration: none !important;
+}
+/* .text_editor_quill i {
+  color: #000 !important;
+  background: none !important;
+} */
 .brandlogo {
   position: absolute;
   top: 20px;
